--- a/FAO/w/index.html
+++ b/FAO/w/index.html
@@ -42,7 +42,7 @@ function myFunction() {
 	<option value="GFA">GFA</option>
 	<option value="JHJ">JHJ</option>
 	<option value="RSC">RSC</option>
-	<option value="ST">ST</option>
+	<option value="SS">SS</option>
 </select> 
 
 <button onclick="myFunction()">Velja</button>
