Some basics for a simple blog

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
 
-<h3>
-<a href="https://github.com/gummif/FastArrayOps.jl">FastArrayOps.jl</a> 
-</h3>
-FastArrayOps.jl benchmark results are <a href="./FAO/index.html">here</a>.
+Nothing to see here.
 
 </body>
 </html>
